--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./whoaremyfriends.html" />
+    <meta http-equiv="refresh" content="0; url=https://milahu.github.io/alchi/src/whoaremyfriends/whoaremyfriends.html" />
   </head>
   <body>
-    <p>redirecting to <a href="./whoaremyfriends.html">whoaremyfriends.html</a></p>
+    redirecting to
+    <a href="https://milahu.github.io/alchi/src/whoaremyfriends/whoaremyfriends.html"
+    >https://milahu.github.io/alchi/src/whoaremyfriends/whoaremyfriends.html</a>
   </body>
 </html>
